--- a/week1/day2/styles/style.css
+++ b/week1/day2/styles/style.css
@@ -19,11 +19,6 @@ nav {
   color: var(--grey);
 }
 
-i {
-  padding: 15px 30px;
-  float: left;
-}
-
 li {
   list-style: none;
   padding: 15px 30px;
@@ -37,34 +32,29 @@ li a {
 }
 
 ul a:hover {
-  color: var(--white);
+  color: var(--yellow);
   font-weight: bold;
 }
 
 .active {
-  color: var(--white);
+  color: var(--yellow);
   font-weight: bold;
 }
-
-div {
-  display: inline;
-}
-body {
-  margin-top: 100px;
-}
-.row {
-  display: block;
-  text-align: center;
-  margin-bottom: 50px;
+#logo {
+  padding-top: 15px;
+  float: left;
 }
 
-.item {
-  display: inline-block;
+.landing {
+  width: 50%;
+  position: absolute;
+  top: 35%;
+  left: 25%;
   text-align: center;
-  width: 33%;
-  max-width: 400px;
-  /* background-color: gray; */
-  /* margin: 100px 0px px 0px; */
+}
+
+.landing h1 {
+  /* color: red; */
 }
 
 footer {
