--- a/week1/day3/cv/style.css
+++ b/week1/day3/cv/style.css
@@ -39,10 +39,12 @@
   background-size: cover;
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
+  min-height: 200px;
 }
 
 .title {
   grid-area: title;
+  text-align: center;
   /* background-color: var(--cream); */
 }
 
@@ -103,11 +105,26 @@
 
 .social {
   display: flex;
-  justify-content: center;
+  justify-content: end;
 }
 
 .exp {
   grid-area: exp;
+  margin-left: 45px;
+  margin-right: 45px;
+  text-align: justify;
+}
+
+.exp h3 {
+  text-decoration: underline;
+}
+
+.exp h1 {
+  color: var(--green);
+}
+
+.exp hr {
+  color: var(--green);
 }
 
 .side {
@@ -116,7 +133,7 @@
 
 .side > div {
   text-align: end;
-  margin: 60px 16px 0px 16px;
+  margin: 45px 16px 0px 16px;
 }
 
 .side > div hr {
@@ -127,16 +144,24 @@
   color: var(--cream);
 }
 
+.languages li {
+  direction: rtl;
+  list-style-position: inside;
+  padding: 5px;
+}
+
 .skills ul {
   padding: 0;
 }
 
 .skills li {
   display: inline-block;
-  margin: 3px;
-  /* background-color: var(--grayD);
-  color: var(--gray); */
+  margin: 5px;
+  background-color: var(--white);
+  color: var(--gray);
   border: 1px solid;
   border-radius: 15px;
   padding: 3px 10px;
+  font-weight: bold;
+  color: var(--grayD);
 }
