--- a/week1/day3/cv/style.css
+++ b/week1/day3/cv/style.css
@@ -85,12 +85,11 @@
 }
 
 .contactRow {
-  display: flex;
-  justify-content: space-between;
+  padding-bottom: 16px;
 }
 .contactRow a {
   color: var(--cream);
-  margin-bottom: 16px;
+  padding-right: 5px;
 }
 
 .contact button {
