--- a/week1/day3/third-landing-page/style.css
+++ b/week1/day3/third-landing-page/style.css
@@ -117,7 +117,7 @@ nav li a.active {
 /* ----title----- */
 
 .title {
-  margin-top: 120px;
+  margin: 120px 30px;
   text-align: center;
 }
 
@@ -231,6 +231,17 @@ p#price {
   background-color: var(--blue);
   color: white;
   border-radius: 5px;
+}
+.chat {
+  display: flex;
+  gap: 10px;
+  background-color: var(--accent);
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  border-top-left-radius: 5px;
+  padding: 10px 16px;
+  color: white;
 }
 
 @media all and (max-width: 1200px) {
