--- a/week1/day3/challenge1/style.css
+++ b/week1/day3/challenge1/style.css
@@ -9,6 +9,9 @@ body {
   padding: 10px 30px;
   display: flex;
   justify-content: space-between;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  margin: 10px;
 }
 
 body div > * {
