--- a/week1/day3/challenge2c/style.css
+++ b/week1/day3/challenge2c/style.css
@@ -54,7 +54,7 @@ html {
 }
 
 .box {
-  border: 2px solid gray;
+  border: 2px solid red;
   position: absolute;
   display: grid;
   grid-template-columns: repeat(16, 1fr);
