--- a/week1/portfolio-new/css/style.css
+++ b/week1/portfolio-new/css/style.css
@@ -20,7 +20,8 @@
   --col5: #6b705c;
   --col6: #20221c;
 
-  --bg-trans: rgba(255, 255, 255, 0.35);
+  --bg-trans-white: rgba(255, 255, 255, 0.35);
+  --bg-trans-black: rgba(0, 0, 0, 0.55);
 
   --fs-h1: 3rem;
   --fs-h2: 2.25rem;
@@ -130,7 +131,7 @@ h3 {
 header {
   position: fixed;
   padding: 18px 10%;
-  background-color: var(--bg-trans);
+  background-color: var(--bg-trans-black);
   -webkit-backdrop-filter: blur(0.5em);
   backdrop-filter: blur(0.5em);
   top: 0;
@@ -162,7 +163,7 @@ header li:not(:first-child) {
 }
 
 header a {
-  color: var(--col6);
+  color: var(--col2);
   text-decoration: none;
   transition: 0.3s;
   -webkit-transition: 0.3s;
@@ -206,18 +207,18 @@ header a:hover {
   margin: 0;
   padding: 0;
   line-height: 1em;
-  transition: 0.3s;
-  -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
-  -ms-transition: 0.3s;
-  -o-transition: 0.3s;
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
 }
 
 .wordCloud > div:hover {
   padding: 20px;
   box-shadow: inset 5px 5px 30px 1px gray;
   border-radius: 10px;
-  cursor: crosshair;
+  cursor: default;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
@@ -351,7 +352,7 @@ header a:hover {
 }
 
 .intro {
-  padding-top: 160px;
+  padding-top: 180px;
   height: 620px;
   width: min-content;
   margin: 0 auto;
@@ -400,7 +401,7 @@ header a:hover {
 .project {
   margin: 0 auto;
   max-width: 450px;
-  background-color: var(--bg-trans);
+  background-color: var(--bg-trans-white);
   -webkit-backdrop-filter: blur(0.5em);
   backdrop-filter: blur(0.5em);
   border-radius: 8px;
@@ -517,9 +518,6 @@ input[type='submit']:hover {
 
 .container {
   border-radius: 8px;
-  /*background-color: var(--col5);
-  */ /*border: 1px solid var(--col1);
-  */
   padding: 20px;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
@@ -556,7 +554,7 @@ input[type='submit']:hover {
 }
 input[type='submit'] {
   display: inline-block;
-  padding: 0.5em 2.5em;
+  padding: 1em 2.5em;
   background: var(--col1);
   color: var(--col5);
   text-decoration: none;
@@ -586,7 +584,7 @@ input[type='submit']:hover {
   background: var(--col6);
   color: var(--col1);
   text-align: center;
-  padding: 2.5em 0;
+  padding: 1.5em 0;
   font-size: var(--fs-h3);
 }
 
@@ -612,7 +610,7 @@ input[type='submit']:hover {
   list-style: none;
   display: flex;
   justify-content: center;
-  margin: 2em 0 0;
+  margin: 1em 0 0;
   padding: 0;
 }
 
