--- a/week1/portfolio-new/css/style.css
+++ b/week1/portfolio-new/css/style.css
@@ -190,6 +190,7 @@ header a:hover {
 /* intro ##################################################### */
 
 .wordCloud {
+  /* border: 3px solid red; */
   display: grid;
   gap: 10px;
   grid-template:
@@ -319,13 +320,6 @@ header a:hover {
 }
 
 @media (max-width: 600px) {
-  .intro {
-    padding-top: 170px;
-    height: 500px;
-    width: min-content;
-    margin: 0 auto;
-  }
-
   .wordCloud {
     gap: 5px;
   }
@@ -352,18 +346,14 @@ header a:hover {
 }
 
 .intro {
-  padding-top: 180px;
-  height: 620px;
-  width: min-content;
-  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 3px solid blue; */
+  margin-top: 90px;
+  height: clamp(350px, 50vw, 600px);
 }
 
-@media (max-height: 800px) {
-  .intro {
-    padding-top: 100px;
-    height: 500px;
-  }
-}
 /* proj ###################################################### */
 .my-projects {
   background-color: gray;
